# lezgian_tts

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  locustfile.py  pyproject.toml
db/: db_create.py
lezgian_tts/: audio_manager.py  database_manager.py  setup.py  synthesizer.py  task_manager.py
ui/: auth.html  history.html  index.html  main.html  profile.html
